Archive2/26/dab32c98e395ac/output
+ g++ -std=c++14 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function 'int main()':
main.cpp:7:11: error: expected class-name before '(' token
     tr.~TR();
           ^
+ clang++ -std=c++14 -O2 -Wall -pedantic -pthread main.cpp
main.cpp:7:9: error: destructor type 'TR' (aka 'T &') in object destruction expression does not match the type 'T' of the object being destroyed
    tr.~TR();
        ^
main.cpp:2:7: note: type 'TR' (aka 'T &') is declared here
using TR = T&;
      ^
1 error generated.
