Archive2/26/dab32c98e395ac/main.cpp
struct T{};
using TR = T&;

int main(){
    T t;
    TR tr = t;
    tr.~TR();
}